# usb2atari

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
src/: main.cpp
